@@ -1,5 +1,8 @@
 Version 4.34 - 23 June 2011, by Per Øyvid Karlsen
 
+- add a workaround for handling upgrade from older berkeley db versions which
+  might not support new configuration in DB_CONFIG, causing it to break during
+  upgrade
 - add support for specifying tag name to match with URPM::Transaction->remove()
 - add some regression tests for parsing disttag & distepoch from synthesis
 - extract disttag & distepoch from new fields in @info@ of synthesis
